# chrome-tab-organizer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/chrome_tab_organizer/: __init__.py  cache.py  chrome.py  cli.py  config.py  enrichment.py  exporters.py  extraction.py  llm.py  models.py  pipeline.py
tests/: test_cache.py  test_chrome.py  test_classification.py  test_config.py  test_enrichment.py  test_exporters.py  test_extraction.py  test_llm.py  test_models.py  test_pipeline.py
